--- a/sharding-jdbc-demo/master-slave-01/src/main/resources/application.yml
+++ b/sharding-jdbc-demo/master-slave-01/src/main/resources/application.yml
@@ -7,3 +7,12 @@ spring:
         show_sql: true
   profiles:
     active: masterslave
+
+
+sharding:
+  jdbc:
+    config:
+      sharding:
+        props:
+          sql:
+            show: true # 显示sql
