--- a/sharding-jdbc-demo/master-slave-03/pom.xml
+++ b/sharding-jdbc-demo/master-slave-03/pom.xml
@@ -97,6 +97,18 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>src/main/java</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>**/xml/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 
